# Learning_Gen_AI

./: README.md
chat_completion/: compose.yaml
chat_completion/chat_completion/: .backupenv  Dockerfile  pyproject.toml
chat_completion/chat_completion/src/: Untitled.ipynb
chat_completion/chat_completion/src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
function_calling/: Untitled.ipynb  compose.yaml
function_calling/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
function_calling/microservices_1/: Dockerfile  pyproject.toml
function_calling/microservices_1/src/: bus.py  helper_fun_data.py  main.py
function_calling/microservices_2/: Dockerfile  pyproject.toml
function_calling/microservices_2/src/: Untitled.ipynb
speedo_bus_project/: pyproject.toml
speedo_bus_project/src/: helper_fun.py  main.py  openai_api_fun.py  openai_data.py  routes_data.py
streaming/: compose.yaml
streaming/streaming/: pyproject.toml
streaming/streaming/src/: main.ipynb
streaming/streaming/src/.ipynb_checkpoints/: main-checkpoint.ipynb
