[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["arman229 <armanashraf015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.34.0"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
