[tool.poetry]
name = "streaming"
version = "0.1.0"
description = ""
authors = ["arman229 <armanashraf015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.34.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
